fix footer on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1122,7 +1122,7 @@ button,
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin-bottom: 17px;
+    margin-bottom: 20px;
     padding-right: 5px;
   }
 }
